<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_upload"
        style="@style/Widget.AppCompat.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:titleTextAppearance="@style/CustomToolBarTitle"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/upload_title" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ns_upload"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvl_service_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_margin"
                android:layout_marginStart="@dimen/content_margin"
                android:layout_marginTop="10dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_name"
                    android:textSize="@dimen/form_text_size" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/sp_type"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:background="@drawable/underline_arrow_down"

                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/tvl_service_name" />

            <TextView
                android:id="@+id/tv_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/monetary_unit"
                android:visibility="gone"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/sp_type"
                app:layout_constraintStart_toEndOf="@+id/sp_type"
                app:layout_constraintTop_toTopOf="@+id/sp_type" />


            <CheckBox
                android:id="@+id/cb_use_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/use_current_location"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/tvl_service_name" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvl_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/tvl_zip_code"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/cb_use_current_location">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/address_hint"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/sp_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/underline_arrow_down"
                app:layout_constraintEnd_toStartOf="@+id/sp_state"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/tvl_address"></Spinner>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvl_zip_code"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/tvl_service_name"
                app:layout_constraintTop_toTopOf="@+id/tvl_address">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zip_code_hint"
                    android:inputType="number"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/sp_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/underline_arrow_down"
                android:entries="@array/state_list"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@+id/sp_city"
                app:layout_constraintEnd_toEndOf="@+id/tvl_zip_code"
                app:layout_constraintStart_toEndOf="@+id/sp_city" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvl_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dollar"
                app:layout_constraintEnd_toEndOf="@+id/tvl_service_name"
                app:layout_constraintStart_toEndOf="@+id/tv_dollar"
                app:layout_constraintTop_toTopOf="@+id/tv_dollar">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/average_hint"
                    android:inputType="number"
                    android:textSize="@dimen/form_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvl_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/tvl_service_name"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/sp_end_time">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvl_wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/tvl_service_name"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/tvl_phone">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wechat_number_hint"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/tvl_service_name"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/tvl_wechat" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/shape_rectangle_round_black_white"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="@integer/description_min_lines"
                app:layout_constraintEnd_toEndOf="@+id/tvl_service_name"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/rv_add" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/google_ad_unit_id_upload"
                ads:layout_constraintTop_toBottomOf="@+id/et_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/sp_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:background="@drawable/underline_arrow_down"
                app:layout_constraintEnd_toEndOf="@+id/tvl_service_name"
                app:layout_constraintStart_toStartOf="@+id/tvl_service_name"
                app:layout_constraintTop_toBottomOf="@+id/sp_city" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>